<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="superuser">Superuser</string>
    <string name="app_name">Superuser</string>
    <string name="app_name_request">Superuser Request</string>
    <string name="app_details">App Details</string>
    <string name="description_home">Home</string>
    <string name="description_log">Log</string>
    <string name="description_clear_log">Clear log</string>
    <string name="description_preferences">Preferences</string>
    <string name="description_extras">Extras</string>
    <string name="menu_extras">Extras</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_clear_log">Clear log</string>
    <string name="permgrouplab_superuser">Superuser Permissions</string>
    <string name="permgroupdesc_superuser">Permissions related to Superuser</string>
    <string name="permlab_respond">respond to superuser requests</string>
    <string name="permdesc_respond">Allows the application to respond to requests for superuser access.</string>
    <string name="permlab_provider_read">Read Superuser Data</string>
    <string name="permdesc_provider_read">Allows the application to read data from the Superuser ContentProvider</string>
    <string name="permlab_provider_write">Write Superuser Data</string>
    <string name="permdesc_provider_write">Allows the application to write data to the Superuser ContentProvider</string>
    <string name="recent_activity">Recent activity</string>
    <string name="report_msg">Would you like to report this package to the developer of Superuser for investigation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Okay</string>
    <string name="stop">Stop</string>
    <string name="retry">Retry</string>
    <string name="restart">Restart</string>
    <string name="dialog_database_error_title">Database error</string>
    <string name="dialog_database_error_message">Superuser database could not be opened, try again later. If the problem persists please contact the developer.</string>
    <string name="allow">Allow</string>
    <string name="forget">Forget</string>
    <string name="cancel">Cancel</string>
    <string name="deny">Deny</string>
    <string name="set">Set</string>
    <string name="remember">Remember</string>
    <string name="remember_disabled">Remembering disabled until su is updated</string>
    <string name="uid">(uid: %d)</string>
    <string name="shared_uid">Shared UID (%1$d)</string>
    <string name="request">%1$s as %2$s (uid: %3$d)</string>
    <string name="unknown">Unknown name</string>
    <string name="allowed">Allowed</string>
    <string name="denied">Denied</string>
    <string name="created">Created</string>
    <string name="toggled">Toggled</string>
    <string name="no_log_data">No log data</string>
    <string name="empty_apps">No apps in list</string>
    <string name="empty_logs">No log information</string>
    <string name="log_count">Showing %d entries</string>
    <string name="log_last_accessed">Last accessed on %1$s at %2$s</string>
    <string name="log_last_allowed">Last allowed on %1$s at %2$s</string>
    <string name="log_last_denied">Last denied on %1$s at %2$s</string>
    <string name="log_last_toggled">Last toggled on %1$s at %2$s</string>
    <string name="log_created_on">Created on %1$s at %2$s</string>
    <string name="detail_package">Package</string>
    <string name="detail_app_uid">App UID</string>
    <string name="detail_request">Requested UID</string>
    <string name="detail_command">Command</string>
    <string name="detail_status">Status</string>
    <string name="detail_created">Created on</string>
    <string name="detail_last_accessed">Last Accessed</string>
    <string name="request_message">The following app is requesting superuser access:</string>
    <string name="request_app_name">App</string>
    <string name="pref_title">Preferences</string>
    <string name="pref_category_security">Security</string>
    <string name="pref_pin_title">Use PIN</string>
    <string name="pref_pin_summary_on">Permissions prompt will require PIN</string>
    <string name="pref_pin_summary_off">Permissions prompt will not require PIN</string>
    <string name="pref_change_pin_title">Change PIN</string>
    <string name="pref_timeout_title">Access timeout</string>
    <string name="pref_timeout_summary">Apps that are not remembered will have access for %1$d seconds after the prompt</string>
    <string name="pref_automatic_action_title">Automatic response</string>
    <string name="pref_automatic_action_summary">Set the way Superuser handles new requests</string>
    <string name="pref_ghost_mode_title">Ghost mode</string>
    <string name="pref_ghost_mode_summary_on">Dial secret code to launch Superuser</string>
    <string name="pref_ghost_mode_summary_off">Ghost mode deactivated</string>
    <string name="pref_ghost_mode_message">Ghost mode hides the Superuser icon from the launcher. The icon will be hidden the next time the launcher is restarted. Once the icon is hidden you can access Superuser by dialing a secret code in the dialer. The default secret code is *#*#787378737#*#* (*#*#superuser#*#*), but the digits can be changed.\n\nNote that if your device does not have a dialer, you probably shouldn\'t enable Ghost mode.\n\nEnable Ghost mode?</string>
    <string name="pref_ghost_mode_enabled_message">Ghost mode enabled. Please restart your launcher or reboot your phone to see the change.</string>
    <string name="pref_secret_code_title">Secret code</string>
    <string name="pref_secret_code_summary">Secret code is *#*#%1$s#*#*</string>
    <string name="pref_category_applist_title">Apps list</string>
    <string name="pref_tap_action_title">Tap action</string>
    <string name="pref_tap_action_summary">Action to perform when an entry is tapped</string>
    <string name="pref_show_status_icons_title">Show status icons</string>
    <string name="pref_show_status_icons_summary_on">Show icon for status of each app</string>
    <string name="pref_show_status_icons_summary_off">Do not show icon for status of each app</string>
    <string name="pref_status_icon_type_title">Status icon type</string>
    <string name="pref_status_icon_type_summary">Style of status icon to show</string>
    <string name="pref_applist_show_log_data_title">Show log data</string>
    <string name="pref_applist_show_log_data_summary_on">Show log data in App list</string>
    <string name="pref_applist_show_log_data_summary_off">Do not show log data in app list</string>
    <string name="pref_category_log_title">Log</string>
    <string name="pref_enable_logging_title">Enable logging</string>
    <string name="pref_enable_logging_summary_on">Permission creation and access will be logged</string>
    <string name="pref_enable_logging_summary_off">Permission creation and access will not be logged</string>
    <string name="pref_delete_old_logs_title">Delete old log entries</string>
    <string name="pref_delete_old_logs_summary_on">Delete old log entries when limit is reached</string>
    <string name="pref_delete_old_logs_summary_off">Do not delete old log entries when limit is reached</string>
    <string name="pref_log_entry_limit_title">Log entry limit</string>
    <string name="pref_log_entry_limit_summary">%1$d log entries</string>
    <string name="pref_log_entries_to_save">Set the number of log entries to save</string>
    <string name="pref_24_hour_title">Use 24-hour format</string>
    <string name="pref_24_hour_summary_on">Log times will be shown in 24 hour format</string>
    <string name="pref_24_hour_summary_off">Log times will be shown in 12 hour format</string>
    <string name="pref_show_seconds_title">Show seconds</string>
    <string name="pref_show_seconds_summary_on">Log times will include seconds</string>
    <string name="pref_show_seconds_summary_off">Log times will not include seconds</string>
    <string name="pref_date_format_title">Select date format</string>
    <string name="pref_date_format_summary">Format used to display date in all logs</string>
    <string name="pref_clear_log_title">Clear log</string>
    <string name="pref_clearing_log_title">Clearing log</string>
    <string name="pref_clearing_log_summary">Please wait</string>
    <string name="pref_log_cleared">Log cleared, %1$d entries deleted.</string>
    <string name="pref_category_notification_title">Notifications</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_summary_on">Show notification when an app is granted Su permissions</string>
    <string name="pref_notifications_summary_off">Do not show notification when an app is granted Su permissions</string>
    <string name="pref_notifications_type_title">Notification type</string>
    <string name="pref_notifications_type_summary">Type of notification to show when an app is granted SU permissions</string>
    <string name="pref_toast_location_title">Toast location</string>
    <string name="pref_toast_location_summary">Where the notification will show on the screen</string>
    <string name="pref_category_nfc_title">NFC</string>
    <string name="pref_use_allow_tag_title">Use NFC tag to allow</string>
    <string name="pref_use_allow_tag_summary_on">Enter PIN or scan tag to allow</string>
    <string name="pref_use_allow_tag_summary_off">Enter PIN only to allow</string>
    <string name="pref_write_allow_tag_title">Write new allow tag</string>
    <string name="pref_write_allow_tag_summary">Write a new tag to be used to allow</string>
    <string name="pref_category_info_title">Superuser information</string>
    <string name="pref_version_title">Superuser v%1$s (%2$d)</string>
    <string name="pref_version_summary">Database version %s</string>
    <string name="pref_bin_version_title_loading">Loading su binary version</string>
    <string name="pref_bin_version_title">Su binary v%s</string>
    <string name="pref_bin_version_summary">Tap to check for updates</string>
    <string name="pref_changelog_title">Changelog</string>
    <string name="pref_changelog_summary">Display the changelog</string>
    <string name="pref_get_elite_title">Go Elite!</string>
    <string name="pref_get_elite_summary">Buy Elite to unlock all the options</string>
    <string name="pref_elite_only_summary">This option is only available to Elite users</string>
    <plurals name="pref_logs_deleted">
        <item quantity="one">One log deleted</item>
        <item quantity="other">%1$d logs deleted</item>
    </plurals>
    <string name="updater_title">Binary Updater</string>
    <string name="updater_update_now">Tap \'Update\' button to begin update.</string>
    <string name="updater_new_su_found">New version of su binary found. Update now?</string>
    <string name="updater_current_installed">Current version already installed. No action required.</string>
    <string name="updater_update">Update</string>
    <string name="updater_update_anyway">Update anyway</string>
    <string name="updater_cool">That was cool, do it again</string>
    <string name="updater_no_action">No action required</string>
    <string name="updater_working">Working...</string>
    <string name="updater_manifest_legacy">http://downloads.androidsu.com/superuser/su/manifest-legacy.json</string>
    <string name="updater_manifest">http://downloads.androidsu.com/superuser/su/manifest.json</string>
    <string name="updater_ok">okay!</string>
    <string name="updater_fail">fail!</string>
    <string name="updater_outdated">outdated</string>
    <string name="updater_update_failed">Update failed. Try again?</string>
    <string name="updater_download_failed">Download failed. Try again?</string>
    <string name="updater_try_again">Try again</string>
    <string name="updater_su_updated">su binary updated successfully</string>
</resources>