<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 Adam Shanks (ChainsDD)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_notifications"
        android:title="@string/pref_notifications_title"
        android:summaryOn="@string/pref_notifications_summary_on"
        android:summaryOff="@string/pref_notifications_summary_off"
        android:defaultValue="true" />
    <ListPreference
        android:key="pref_notification_type"
        android:title="@string/pref_notifications_type_title"
        android:summary="@string/pref_notifications_type_summary"
        android:entries="@array/pref_notifications_type_entries"
        android:entryValues="@array/pref_notifications_type_values"
        android:defaultValue="toast"
        android:dependency="pref_notifications" />
    <ListPreference
        android:key="pref_toast_location"
        android:title="@string/pref_toast_location_title"
        android:summary="@string/pref_toast_location_summary"
        android:entries="@array/pref_toast_location_entries"
        android:entryValues="@array/pref_toast_location_values"
        android:defaultValue="0"
        android:dependency="pref_notifications" />
</PreferenceScreen>