<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingLeft="20dip"
	android:paddingRight="20dip"
	android:background="@drawable/dialog_background" >
	
	<ImageView android:id="@+id/icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:scaleType="centerInside"
		android:src="@drawable/icon" />
		
	<TextView android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/icon"
		android:layout_centerHorizontal="true"
		android:textSize="16sp"
		android:textStyle="bold"
		android:text="@string/app_name_request" />
	
	<ImageView android:id="@+id/titleBottom"
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:layout_below="@id/title"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dip"
		android:layout_marginBottom="5dip"
		android:scaleType="fitXY"
		android:src="@drawable/divider_horizontal_bright" />
	
	<TextView android:id="@+id/message"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/titleBottom"
		android:layout_centerHorizontal="true"
		android:gravity="center_horizontal"
		android:text="@string/request_message" />

	<RelativeLayout android:id="@+id/detailsLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/message"
		android:layout_centerHorizontal="true"
		android:paddingTop="5dip"
		android:paddingBottom="5dip"
		android:paddingLeft="15dip"
		android:paddingRight="15dip">

		<TextView android:id="@+id/appNameLabel"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:text="@string/request_app_name" />
	
		<TextView android:id="@+id/appName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@id/appNameLabel"
			android:layout_toRightOf="@id/appNameLabel"
			android:singleLine="true"
			android:ellipsize="middle" />

		<TextView android:id="@+id/packageNameLabel"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/appNameLabel"
			android:layout_alignParentLeft="true"
			android:text="@string/detail_package" />

		<TextView android:id="@+id/packageName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@id/packageNameLabel"
			android:layout_toRightOf="@id/packageNameLabel"
			android:singleLine="true"
			android:ellipsize="middle" />

		<TextView android:id="@+id/requestDetailLabel"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/packageNameLabel"
			android:layout_alignParentLeft="true"
			android:text="@string/detail_request" />

		<TextView android:id="@+id/requestDetail"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@id/requestDetailLabel"
			android:layout_toRightOf="@id/requestDetailLabel"
			android:singleLine="true"
			android:ellipsize="middle" />

		<TextView android:id="@+id/commandLabel"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/requestDetailLabel"
			android:layout_alignParentLeft="true"
			android:text="@string/detail_command" />

		<TextView android:id="@+id/command"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@id/commandLabel"
			android:layout_toRightOf="@id/commandLabel"
			android:singleLine="true"
			android:ellipsize="middle" />
	
	</RelativeLayout>
	
    <CheckBox android:id="@+id/checkRemember"
        android:text="@string/remember"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsLayout"
        android:layout_alignParentLeft="true" />
        
    <TextView android:id="@+id/timer"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignBaseline="@id/checkRemember"
    	android:layout_alignParentRight="true"
    	android:paddingRight="5dip" />

	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/checkRemember"
		android:orientation="horizontal" >
		
		<Button android:id="@+id/allow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/checkRemember"
			android:layout_weight="1"
			android:text="@string/allow" />
		
		<Button android:id="@+id/deny"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/deny" />
	</LinearLayout>
	
</RelativeLayout>