<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 Adam Shanks (ChainsDD)
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/icon" />

    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/app_name_request" />

    <ImageView android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:scaleType="fitXY"
        android:src="@drawable/dialog_divider" />

    <TextView android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/request_message" />

    <RelativeLayout android:id="@+id/detailsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="10dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip">

        <TextView android:id="@+id/appNameLabel"
            style="@style/DetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/request_app_name" />
        <TextView android:id="@+id/appName"
            style="@style/DetailsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/appNameLabel"
            android:layout_toRightOf="@id/appNameLabel" />

        <TextView android:id="@+id/packageNameLabel"
            style="@style/DetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appNameLabel"
            android:layout_alignParentLeft="true"
            android:text="@string/detail_package" />
        <TextView android:id="@+id/packageName"
            style="@style/DetailsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/packageNameLabel"
            android:layout_toRightOf="@id/packageNameLabel" />

        <TextView android:id="@+id/requestDetailLabel"
            style="@style/DetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/packageNameLabel"
            android:layout_alignParentLeft="true"
            android:text="@string/detail_request" />
        <TextView android:id="@+id/requestDetail"
            style="@style/DetailsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/requestDetailLabel"
            android:layout_toRightOf="@id/requestDetailLabel" />

        <TextView android:id="@+id/commandLabel"
            style="@style/DetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/requestDetailLabel"
            android:layout_alignParentLeft="true"
            android:text="@string/detail_command" />
        <TextView android:id="@+id/command"
            style="@style/DetailsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/commandLabel"
            android:layout_toRightOf="@id/commandLabel" />

    </RelativeLayout>

    <LinearLayout android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/allow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/allow" />

        <Button android:id="@+id/deny"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deny" />

    </LinearLayout>
    
    <CheckBox android:id="@+id/checkRemember"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember" />

</LinearLayout>
