<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 Adam Shanks (ChainsDD)
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/home_button"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="goHome" />
        
        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        
        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/clear_log_button"
            android:contentDescription="@string/menu_clear_log"
            android:src="@drawable/ic_title_clear_log"
            android:onClick="clearLog" />
    </LinearLayout>
    <TextView android:id="@+id/log_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:visibility="gone" />
    <TextView android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_logs" />
    <com.noshufou.android.su.widget.PinnedHeaderListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>